# udantic

./: LICENSE  README.md  poetry.lock.old  pyproject.toml
docs/: docfield.md  doctype.md
tests/fields/: test_cardnumber.py  test_datetime.py  test_email.py  test_image.py  test_multiselect.py  test_nop.py  test_percent.py  test_phone.py  test_price.py  test_select.py
udantic/docs/: attach.py  contact.py
udantic/fields/: cardnumber.py  check.py  color.py  datetime.py  email.py  image.py  multiselect.py  network.py  nop.py  percent.py  phone.py  price.py  rating.py  reference.py  secret.py  select.py  url.py  utils.py  uuid.py
